haskell-logic (0.33) unstable; urgency=low

  * Move the modules into the Data heirarchy.

 -- David Fox <dsf@seereason.com>  Sun, 17 Jul 2011 07:29:49 -0700

haskell-logic (0.32) unstable; urgency=low

  * Add a Pred class to describe predicate application
  * Split pretty printing and show into a module.

 -- David Fox <dsf@seereason.com>  Sat, 16 Jul 2011 15:24:43 -0700

haskell-logic (0.31) unstable; urgency=low

  * Create a second instance of FirstOrderFormula in the module
    Logic.Instances.Public, with Eq and Ord instances that use
    the normal form to detect formulas that are equivalent under
    identity transforms.
  * Export the Bijection class which converts between the public
    and internal formula types.

 -- David Fox <dsf@seereason.com>  Wed, 06 Jul 2011 12:46:45 -0700

haskell-logic (0.30) unstable; urgency=low

  * Simplify the parameters of the ImplicativeNormalForm type in the
    native instance, move it to Logic.Normal and eliminate the
    ImplicativeNormalFormula class.
  * Don't require all formula and term types to be instances of Ord,
    we can just specify it in the functions that need it.

 -- David Fox <dsf@seereason.com>  Sat, 02 Jul 2011 09:20:57 -0700

haskell-logic (0.29) unstable; urgency=low

  * Ported to safe-copy

 -- Jeremy Shaw <jeremy@seereason.com>  Fri, 17 Jun 2011 11:18:32 -0500

haskell-logic (0.28) unstable; urgency=low

  * Switch the order of some constructors so that defaultValue of
    Formula gives us a simpler value.

 -- David Fox <dsf@seereason.com>  Sun, 01 May 2011 11:36:12 -0700

haskell-logic (0.27) unstable; urgency=low

  * Moved JSON instances back to seereason.

 -- David Fox <dsf@seereason.com>  Wed, 13 Apr 2011 20:53:42 -0700

haskell-logic (0.26) unstable; urgency=low

  * Add JSON instances.

 -- David Fox <dsf@seereason.com>  Mon, 04 Apr 2011 07:21:25 -0600

haskell-logic (0.25) unstable; urgency=low

  * Disable the (unused) Logic-TPTP instance, it is blocking the
    ghc7 build.
